core: group aggregations
