# http/openapi.json
@@ -2433,6 +2433,12 @@
                       "type",
                       "value"
                     ]
+                  },
+                  "groupBy": {
+                    "type": "array",
+                    "items": {
+                      "type": "string"
+                    }
                   }
                 },
                 "required": [
@@ -2565,6 +2571,454 @@
                       "type",
                       "value"
                     ]
+                  },
+                  "groupBy": {
+                    "type": "array",
+                    "items": {
+                      "type": "string"
+                    }
+                  }
+                },
+                "required": [
+                  "metrics",
+                  "timeRange",
+                  "granularity"
+                ]
+              }
+            }
+          }
+        },
+        "parameters": [
+          {
+            "schema": {
+              "type": "string"
+            },
+            "in": "path",
+            "name": "id",
+            "required": true
+          }
+        ]
+      }
+    },
+    "/api/reports/{id}/realtime/data": {
+      "post": {
+        "operationId": "postApiReports:idRealtimeData",
+        "tags": [
+          "Reports"
+        ],
+        "summary": "Query a Report's data in realtime",
+        "responses": {
+          "200": {
+            "description": "Report data",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "timestamp": {
+                        "type": "string"
+                      },
+                      "value": {
+                        "type": "number"
+                      },
+                      "category": {
+                        "type": "string"
+                      }
+                    },
+                    "required": [
+                      "timestamp",
+                      "value"
+                    ]
+                  }
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Error response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "string"
+                    }
+                  },
+                  "required": [
+                    "error"
+                  ]
+                }
+              }
+            }
+          }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "metric": {
+                    "type": "object",
+                    "properties": {
+                      "type": {
+                        "enum": [
+                          "COUNT",
+                          "SUM",
+                          "CATEGORY",
+                          "COMPOUND_SUM",
+                          "BOOLEAN"
+                        ]
+                      },
+                      "field": {
+                        "type": "string"
+                      }
+                    },
+                    "required": [
+                      "type"
+                    ]
+                  },
+                  "timeRange": {
+                    "type": "object",
+                    "properties": {
+                      "start": {
+                        "type": "string"
+                      },
+                      "end": {
+                        "type": "string"
+                      }
+                    },
+                    "required": [
+                      "start",
+                      "end"
+                    ]
+                  },
+                  "granularity": {
+                    "enum": [
+                      "100ms",
+                      "200ms",
+                      "250ms",
+                      "500ms",
+                      "second",
+                      "minute",
+                      "5minute",
+                      "10minute",
+                      "15minute",
+                      "30minute",
+                      "hour",
+                      "2hour",
+                      "4hour",
+                      "6hour",
+                      "12hour",
+                      "day",
+                      "3day",
+                      "7day",
+                      "15day",
+                      "30day",
+                      "45day",
+                      "60day",
+                      "90day"
+                    ]
+                  },
+                  "attribution": {
+                    "type": "object",
+                    "properties": {
+                      "type": {
+                        "type": "string"
+                      },
+                      "value": {
+                        "type": "string"
+                      }
+                    },
+                    "required": [
+                      "type",
+                      "value"
+                    ]
+                  },
+                  "groupBy": {
+                    "type": "array",
+                    "items": {
+                      "type": "string"
+                    }
+                  }
+                },
+                "required": [
+                  "metric",
+                  "timeRange",
+                  "granularity"
+                ]
+              }
+            }
+          }
+        },
+        "parameters": [
+          {
+            "schema": {
+              "type": "string"
+            },
+            "in": "path",
+            "name": "id",
+            "required": true
+          }
+        ]
+      }
+    },
+    "/api/reports/{id}/realtime/dataset": {
+      "post": {
+        "operationId": "postApiReports:idRealtimeDataset",
+        "tags": [
+          "Reports"
+        ],
+        "summary": "Query a Report's dataset in realtime",
+        "responses": {
+          "200": {
+            "description": "Dataset data",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "additionalProperties": {}
+                  }
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Error response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "string"
+                    }
+                  },
+                  "required": [
+                    "error"
+                  ]
+                }
+              }
+            }
+          }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "metrics": {
+                    "type": "array",
+                    "items": {
+                      "type": "string"
+                    }
+                  },
+                  "timeRange": {
+                    "type": "object",
+                    "properties": {
+                      "start": {
+                        "type": "string"
+                      },
+                      "end": {
+                        "type": "string"
+                      }
+                    },
+                    "required": [
+                      "start",
+                      "end"
+                    ]
+                  },
+                  "granularity": {
+                    "enum": [
+                      "100ms",
+                      "200ms",
+                      "250ms",
+                      "500ms",
+                      "second",
+                      "minute",
+                      "5minute",
+                      "10minute",
+                      "15minute",
+                      "30minute",
+                      "hour",
+                      "2hour",
+                      "4hour",
+                      "6hour",
+                      "12hour",
+                      "day",
+                      "3day",
+                      "7day",
+                      "15day",
+                      "30day",
+                      "45day",
+                      "60day",
+                      "90day"
+                    ]
+                  },
+                  "attribution": {
+                    "type": "object",
+                    "properties": {
+                      "type": {
+                        "type": "string"
+                      },
+                      "value": {
+                        "type": "string"
+                      }
+                    },
+                    "required": [
+                      "type",
+                      "value"
+                    ]
+                  },
+                  "groupBy": {
+                    "type": "array",
+                    "items": {
+                      "type": "string"
+                    }
+                  }
+                },
+                "required": [
+                  "metrics",
+                  "timeRange",
+                  "granularity"
+                ]
+              }
+            }
+          }
+        },
+        "parameters": [
+          {
+            "schema": {
+              "type": "string"
+            },
+            "in": "path",
+            "name": "id",
+            "required": true
+          }
+        ]
+      }
+    },
+    "/api/reports/{id}/realtime/groups": {
+      "post": {
+        "operationId": "postApiReports:idRealtimeGroups",
+        "tags": [
+          "Reports"
+        ],
+        "summary": "Query a Report's groups in realtime",
+        "responses": {
+          "200": {
+            "description": "Groups data",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "additionalProperties": {}
+                  }
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Error response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "string"
+                    }
+                  },
+                  "required": [
+                    "error"
+                  ]
+                }
+              }
+            }
+          }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "metrics": {
+                    "type": "array",
+                    "items": {
+                      "type": "string"
+                    }
+                  },
+                  "timeRange": {
+                    "type": "object",
+                    "properties": {
+                      "start": {
+                        "type": "string"
+                      },
+                      "end": {
+                        "type": "string"
+                      }
+                    },
+                    "required": [
+                      "start",
+                      "end"
+                    ]
+                  },
+                  "granularity": {
+                    "enum": [
+                      "100ms",
+                      "200ms",
+                      "250ms",
+                      "500ms",
+                      "second",
+                      "minute",
+                      "5minute",
+                      "10minute",
+                      "15minute",
+                      "30minute",
+                      "hour",
+                      "2hour",
+                      "4hour",
+                      "6hour",
+                      "12hour",
+                      "day",
+                      "3day",
+                      "7day",
+                      "15day",
+                      "30day",
+                      "45day",
+                      "60day",
+                      "90day"
+                    ]
+                  },
+                  "attribution": {
+                    "type": "object",
+                    "properties": {
+                      "type": {
+                        "type": "string"
+                      },
+                      "value": {
+                        "type": "string"
+                      }
+                    },
+                    "required": [
+                      "type",
+                      "value"
+                    ]
+                  },
+                  "groupBy": {
+                    "type": "array",
+                    "items": {
+                      "type": "string"
+                    }
                   }
                 },
                 "required": [
